EXceLlenSe/src/main/java/de/hft_stuttgart/cpl/EXceLlenSe.java
/* Generated By:JavaCC: Do not edit this line. EXceLlenSe.java */
package de.hft_stuttgart.cpl;

public class EXceLlenSe implements EXceLlenSeConstants {
    public static void main(String args[]) throws ParseException {
        EXceLlenSe parser = new EXceLlenSe(System.in);
        while (true) {
            parser.parseOneLine();
        }
    }

  final public void parseOneLine() throws ParseException {
    Object a;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
    case ADD:
    case SUB:
    case STRING:
    case CELL_REFERENCE:
    case 18:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CELL_REFERENCE:
        a = assignment();
              System.out.println(); System.out.println(a);
        break;
      case NUMBER:
      case ADD:
      case SUB:
      case STRING:
      case 18:
        a = expr();
              System.out.println(); System.out.println(a);
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(EOL);
      break;
    case 0:
      jj_consume_token(0);
              {if (true) throw new ParseException("End Of Input");}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public Object assignment() throws ParseException {
    Token cellRef;
    Object value;
    cellRef = jj_consume_token(CELL_REFERENCE);
    jj_consume_token(ASSIGN);
    value = expr();
        System.out.printf("Assigned %s = %s\n", cellRef.image, value);
      {if (true) return value;}
      {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  final public Object expr() throws ParseException {
    Object a;
    Object b;
    a = term();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
      case SUB:
      case CONCAT:
      case FORMAT:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
        jj_consume_token(ADD);
        b = term();
            System.out.print("+ ");
            if (a instanceof Double && b instanceof Double) {
                a = (double)a + (double)b;
            }
            else if (a instanceof String && b instanceof String) {
                a = (String)a + (String)b;
            }
        break;
      case SUB:
        jj_consume_token(SUB);
        b = term();
            if (a instanceof Double && b instanceof Double) {
                a = (double)a - (double)b;
            }
        break;
      case CONCAT:
        jj_consume_token(CONCAT);
        b = term();
            if (a instanceof String && b instanceof String) {
                a = (String)a + (String)b;
            }
        break;
      case FORMAT:
        jj_consume_token(FORMAT);
        b = term();
                   // if (a instanceof Double && b instanceof Double) {
                     //   a = (double)a - (double)b;
                   // }
                   a=String.format((String) b, a);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Object term() throws ParseException {
    Object a;
    Object b;
    a = factor();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MUL:
      case DIV:
      case MOD:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MUL:
        jj_consume_token(MUL);
        b = factor();
            System.out.print("* ");
            if (a instanceof Double && b instanceof Double) {
                a = (double)a * (double)b;
            }
        break;
      case DIV:
        jj_consume_token(DIV);
        b = factor();
            if (a instanceof Double && b instanceof Double) {
                a = (double)a / (double)b;
            }
        break;
      case MOD:
        jj_consume_token(MOD);
        b = factor();
            if (a instanceof Double && b instanceof Double) {
                a = (double)a % (double)b;
            }
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Object factor() throws ParseException, ParseException {
    Token t;
    Object a;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
      t = jj_consume_token(NUMBER);
        System.out.printf("%s ", t.image);
        {if (true) return Double.parseDouble(t.image);}
      break;
    case ADD:
      jj_consume_token(ADD);
      t = jj_consume_token(NUMBER);
        System.out.printf("+ %s ", t.image);
        {if (true) return Double.parseDouble(t.image);}
      break;
    case SUB:
      jj_consume_token(SUB);
      t = jj_consume_token(NUMBER);
        System.out.printf("- %s ", t.image);
        {if (true) return -Double.parseDouble(t.image);}
      break;
    case STRING:
      t = jj_consume_token(STRING);
        System.out.printf("%s ", t.image);
        {if (true) return t.image.substring(1, t.image.length() - 1);} // Return the string without the enclosing quotes

      break;
    case 18:
      jj_consume_token(18);
      a = expr();
      jj_consume_token(19);
        {if (true) return a;}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public EXceLlenSeTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[7];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x43190,0x43191,0x30180,0x30180,0xe00,0xe00,0x41190,};
   }

  /** Constructor with InputStream. */
  public EXceLlenSe(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public EXceLlenSe(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new EXceLlenSeTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public EXceLlenSe(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new EXceLlenSeTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public EXceLlenSe(EXceLlenSeTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(EXceLlenSeTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List jj_expentries = new java.util.ArrayList();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[20];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 7; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 20; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
